@@ -49,8 +49,9 @@
   // ---- simple version 
 
 
+   // for(int imod = 1; imod<=asc.mol->GetNumberOfModels(); imod++) {
    int imod = 1;
-   CModel *model_p = mol->GetModel(imod);
+   CModel *model_p = asc.mol->GetModel(imod);
    CChain *chain_p;
    // run over chains of the existing mol
    int nchains = model_p->GetNumberOfChains();
